# zipFFT

./: .gitignore  LICENSE  README.md  fft_sizes_config.json  generate_fft_configs.py  pyproject.toml  setup.py  test.py
benchmark/: run_benchmark.cu
configs/: fft_c2c_1d.yaml  fft_r2c_1d.yaml  padded_fft_r2c_1d.yaml
configs/scripts/: base_config.py  complex_fft_1d_generator.py  padded_real_fft_1d_generator.py  real_fft_1d_generator.py
docs/: README.md  memory_io_patterns.md
src/cpp/: zipfft_binding.cpp.tmp
src/cuda/: complex_fft_1d.cu  complex_fft_1d.cuh  complex_fft_1d_binding.cu  complex_fft_1d_strided.cuh  complex_fft_1d_strided_binding.cu  conv_nonstrided.cu  conv_strided.cu  conv_strided_padded.cu  convolution_strided.cuh  convolution_strided_binding.cu  convolution_strided_padded.cuh  convolution_strided_padded_binding.cu  fft_c2c_1d.cu  fft_nonstrided.cu  fft_nonstrided_padded.cu  fft_r2c_1d.cu  fft_strided.cu  padded_complex_fft_1d.cuh  padded_complex_fft_1d_binding.cu  padded_real_conv_1d.cu  padded_real_fft_1d.cu  padded_real_fft_1d.cuh  padded_real_fft_1d_binding.cu  padded_real_fft_2d.cuh  padded_real_fft_2d_binding.cu  real_conv_2d.cuh  real_conv_2d_binding.cu  real_conv_2d_io.hpp  real_fft_1d.cu  real_fft_1d.cuh  real_fft_1d_binding.cu  real_fft_2d.cuh  real_fft_2d_binding.cu  strided_complex_fft_1d.cuh  strided_complex_fft_1d_binding.cu  strided_io_smem_test.hpp  strided_padded_complex_fft_1d.cuh  strided_padded_complex_fft_1d_binding.cu  zipfft_binding.cu
src/include/: block_io.hpp  block_io_generic_strided.hpp  block_io_strided.hpp  common.hpp  complex_fft_1d.cuh  dispatch_table_utils.cuh  dispatcher.hpp  fft_c2c_1d.cuh  kernel.cuh  (+17 more)
tests/: test_c2c_conv_strided.py  test_c2c_conv_strided_padded.py  test_c2c_fft_1d.py  test_c2c_fft_1d_strided.py  test_c2r_fft_1d.py  test_conv_strided.py  test_conv_strided_padded.py  test_fft.py  test_fft_1d.py  test_fft_nonstrided.py  test_fft_nonstrided_padded.py  test_fft_strided.py  test_namespace.py  test_padded_c2c_fft_1d.py  test_padded_complex_fft_1d.py  test_padded_r2c_fft_1d.py  test_padded_real_fft_1d.py  test_padded_real_fft_2d.py  test_r2c_fft_1d.py  test_real_conv_2d.py  test_real_fft_2d.py  test_strided_complex_fft_1d.py  test_strided_padded_complex_fft_1d.py.tmp
(+6 files in other folders)
