[build-system]
requires = ["setuptools>=61.0", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "zipfft"
version = "0.0.1alpha"
description = "Python bindings for Zero Implicit Padded (zip) FFT kernels in CUDA."
authors = [{ name = "Matthew Giammar", email = "mdgiammar@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

# Python package dependencies
dependencies = ["numpy", "torch", "pytest"]

# The package python module in the source directory
[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
