[build-system]
requires = ["setuptools>=61.0", "pybind11", "torch>=2.7.0", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "zipfft"
version = "0.0.3alpha"
description = "Python bindings for Zero Implicit Padded (zip) FFT kernels in CUDA/cuFFTDx."
authors = [{ name = "Matthew Giammar", email = "mdgiammar@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

# Python package dependencies
dependencies = ["numpy", "torch", "pytest", "pyyaml"]

# The package python module in the source directory
[tool.setuptools.packages.find]
where = ["src"]
namespaces = false
